@@ -97,8 +97,8 @@ E void del_quiet(Channel * chan, char *mask);
 E char *get_key(Channel * chan);
 E char *get_limit(Channel * chan);
 E char *get_rejoinlock(Channel * chan);
-E Channel *chan_create(char *chan);
-E Channel *join_user_update(User * user, Channel * chan, char *name);
+E Channel *chan_create(char *chan, time_t ts);
+E Channel *join_user_update(User * user, Channel * chan, char *name, time_t chants);
 E void add_exception(Channel * chan, char *mask);
 E void del_exception(Channel * chan, char *mask);
 E char *get_flood(Channel * chan);
